@@ -1,3 +1,10 @@
+2006-01-17  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* lib/gaupol/gtk/dialogs/filechooser.py:
+	  (SaveDialog): Fixed overwrite confirmations by hooking up to the
+	  "response" signal rather than using the built-in overwrite
+	  confirming.
+
 2006-01-16  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* data/glade/output-window.glade:
